src/styles/views/entry/_overview.scss
.entryOverview {
  @include fluid(padding, 900px, 1850px, 30px, 60px);
  header {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
  }
  &--cols {
    display: grid;
    grid-template-columns:
      minmax(100px, 0.1fr) minmax(100px, 0.1fr)
      0.8fr 145px;
    grid-gap: 20px;
    font-size: 16px;
    line-height: 1.25;
    letter-spacing: -0.16px;
    align-items: center;
    justify-content: space-between;
  }
  .view {
    &--left {
      position: relative;
      max-width: 100%;
      .view--search {
        width: 500px;
        max-width: 100%;
      }
    }
    &--title {
      @include fluid(margin-bottom, 900px, 1850px, 16px, 24px);
    }
    &--description {
      @include fluid(margin-bottom, 900px, 1850px, 25px, 55px);
    }
    &--content {
      ._bcmsInput {
        min-width: 200px;
        max-width: max-content;
        margin-bottom: 20px;
      }
    }
  }
  &--filters {
    background-color: rgba(var(--white), 1);
    box-shadow: 0px 0px 24px rgba(46, 46, 46, 0.12);
    border-radius: 10px;
    position: absolute;
    width: 100%;
    top: 85%;
    z-index: 100;
    padding: 20px;
  }
  &--filter {
    margin-bottom: 15px;
  }
  &--entries {
    list-style-type: none;
    &-item {
      border-bottom: 1px solid rgba(var(--grey), 0.5);
      padding: 20px 0;
      position: relative;
      &:first-of-type {
        font-weight: 600;
      }
      $numberOfRows: 200;
      @for $i from 0 through $numberOfRows {
        &:nth-child(#{$i}) {
          z-index: $numberOfRows - $i;
        }
      }
    }
    &-id {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
    &-title {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
    &-actions {
      display: flex;
      align-items: center;
      &-edit {
        display: flex !important;
        align-items: center !important;
        margin-right: 20px;
        svg {
          width: 20px !important;
          fill: rgba(var(--grey), 1);
          transition: fill 0.22s;
        }
        &:hover,
        &:focus {
          background-color: rgba(var(--light), 1);
          color: rgba(var(--green), 1);
          svg {
            fill: rgba(var(--green), 1) !important;
          }
        }
      }
    }
    &_empty {
      color: rgba(var(--grey), 1);
      font-weight: 400;
      font-size: 24px;
      margin-top: 30px;
    }
  }
  @include media(1050px, 'max') {
    &--search {
      width: 400px;
    }
  }
  @include media(900px, 'max') {
    header {
      flex-direction: column;
      margin-bottom: 50px;
    }
    &--filters {
      top: 95%;
    }
  }
  @include media(768px, 'max') {
    &--entries {
      &-item {
        grid-template-columns: 1fr;
        padding: 20px 0 20px;
        border-bottom: 1px solid rgba(#1e1e38, 0.2);
        margin-bottom: 0 !important;
        &:first-of-type {
          display: none;
        }
        & > * {
          &:not(:last-child) {
            grid-column: 1/2;
          }
          &:last-child {
            grid-column: 2/3;
            grid-row: 1 / 3;
            display: flex;
            flex-direction: column;
            align-items: flex-end;
          }
        }
        &-col {
          &::before {
            content: attr(data-column-name);
            width: 60px;
            display: inline-block;
            font-style: normal;
            font-weight: 600;
            color: rgba(var(--grey), 1);
            font-size: 12px;
            line-height: 1.2;
            margin-right: 20px;
          }
        }
      }
      &-actions {
        &-edit {
          margin-right: 0;
          margin-bottom: 10px;
        }
      }
    }
  }
}

